added model to main page and patients tab

--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -1,7 +1,23 @@
-﻿@{
+﻿@model ApplicationViewModel
+
+@{
     ViewData["Title"] = $"hNext — {Resources.MedicalInformationSystem}";
 }
 
-<div>
-    
+<div class="d-flex flex-row justify-content-start">
+    <nav>
+        <ul class="nav nav-tabs flex-column">
+            @foreach(var tab in Model.Tabs)
+            {
+                <li class="nav-item">
+                    <a class="nav-link active side-tab-selector" id="@String.Format("{0}Tab", tab.Key.ToLower())">
+                        @tab.Value
+                    </a>
+                </li>
+            }
+        </ul>
+    </nav>
+    <main class="container-fluid flex-grow-1 main-panel">
+
+    </main>
 </div>
