--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
                 </div>
             </div>
         </header>
-        @RenderBody()
+        <div class="content-wrapper">
+            @RenderBody()
+        </div>
         <footer>
             <span>© Dmytro Ivanov — @DateTime.Today.Year</span>
         </footer>
