--- a/hNext/hNext.WebClient/Views/_ViewImports.cshtml
+++ b/hNext/hNext.WebClient/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using hNext.WebClient
 @using hNext.Model
 @using hNext.Resources
+@using hNext.WebClient.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
