added patient search function started patent search view

--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -20,4 +20,7 @@
     <main class="container-fluid flex-grow-1 main-panel">
 
     </main>
+    <aside class="d-flex flex-column">
+
+    </aside>
 </div>
