--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -18,7 +18,12 @@
         </ul>
     </nav>
     <main class="container-fluid flex-grow-1 main-panel">
-
+        @foreach(var tab in Model.Tabs)
+        {
+            <div id="@String.Format("{0}Panel", tab.Key.ToLower())" class="d-flex flex-row flex-grow-1">
+                @await Component.InvokeAsync(tab.Key)
+            </div>
+        }
     </main>
     <aside class="d-flex flex-column">
 
