--- a/hNext/hNext.WebClient/Views/_ViewImports.cshtml
+++ b/hNext/hNext.WebClient/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using hNext.WebClient
 @using hNext.Model
-@using hNext.Resources
+@using hNext.ResourceLibrary
+@using hNext.ResourceLibrary.Resources
 @using hNext.WebClient.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
