--- a/hNext/hNext.WebClient/Views/_ViewImports.cshtml
+++ b/hNext/hNext.WebClient/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using hNext.ResourceLibrary
 @using hNext.ResourceLibrary.Resources
 @using hNext.WebClient.Models
+@using hNext.WebClient.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
