--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/lib/vue/vue.js"></script>
+        <script src="~/lib/axios/axios.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
@@ -61,6 +62,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.6/vue.min.js"
                 asp-fallback-src="~/lib/vue/vue.min.js"
                 asp-fallback-test="window.Vue"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"
+                asp-fallback-src="~/lib/axios/axios.min.js"
+                asp-fallback-test="window.Axios"></script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
