modals show control to vuex and patient editor window show/hide

--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
     </script>
 </head>
 <body>
+
+    @RenderSection("Modals", required: false)
+
     <div>
         <header>
             <div class="d-flex flex-column flex-lg-row px-2 py-1 header-panel header-text">
