--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -5,6 +5,16 @@
     ViewData["Title"] = $"hNext — {Localizer[nameof(Resources.MedicalInformationSystem)]}";
 }
 
+@section Modals
+{
+    @foreach(var modal in Model.Modals)
+    {
+        <div id="@($"{modal.Key.ToCamelCase()}Modal")">
+            @await Component.InvokeAsync(modal.Key)
+        </div>
+    }
+}
+
 <div class="d-flex flex-row justify-content-start align-items-stretch">
     <nav>
         <ul class="nav nav-tabs flex-column">
@@ -65,6 +75,13 @@
         <script src="@($"/js/{sideTab.Key.ToCamelCase()}.js")" asp-append-version="true"></script>
         <script>
             let @($"{sideTab.Key.ToCamelCase()}Vue") = window["@($"{sideTab.Key.ToCamelCase()}Model")"]("@($"{sideTab.Key.ToCamelCase()}SidePanel")");
+        </script>
+    }
+    @foreach(var modal in Model.Modals)
+    {
+        <script src="@($"/js/{modal.Key.ToCamelCase()}.js")" asp-append-version="true"></script>
+        <script>
+            let @($"{modal.Key.ToCamelCase()}Vue") = window['@($"{modal.Key.ToCamelCase()}Model")']('@($"{modal.Key.ToCamelCase()}Modal")');
         </script>
     }
 }
