--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div class="d-flex flex-column flex-md-row flex-md-nowrap ml-md-auto">
-            <button class="btn btn-primary mr-md-1 mb-2 mb-md-0" @@click="searchPatients">@Localizer[nameof(Resources.Search)]</button>
-            <button class="btn btn-primary mr-md-2">@Localizer[nameof(Resources.NewPatient)]</button>
+            <button class="btn btn-primary mr-md-1 mb-2 mb-md-0" @@click="searchPatients" :disabled="searching">@Localizer[nameof(Resources.Search)]</button>
+            <button class="btn btn-primary mr-md-2" @@click="showPatientEditor">@Localizer[nameof(Resources.NewPatient)]</button>
         </div>
     </div>
     <div class="mt-2 table-responsive-vertical">
