--- a/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
@@ -2,7 +2,7 @@
 @model PersonEditorViewModel
 
 <div v-cloak>
-    <div v-if="display" class="d-flex flex-column modal-window w-75">
+    <div v-if="display" class="d-flex modal-window flex-column">
         <div class="d-flex flex-column mb-1">
             <button class="btn btn-danger ml-auto" @@click="display = false">
                 <i class="fa fa-times"></i>
