--- a/hNext/hNext.WebClient/wwwroot/css/site.css
+++ b/hNext/hNext.WebClient/wwwroot/css/site.css
@@ -56,6 +56,7 @@ footer {
   position: fixed;
   left: 50%;
   top: 50%;
+  margin-right: -50%;
   transform: translate(-50%, -50%);
   background-color: steelblue;
   z-index: 1000;
